[package]
name = "netaccess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.21.1"
geckodriver = "0.35.0"
regex = "1.10.6"
serde_json = "1.0.145"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
